--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 .hero{
   height:100vh;
   weight:100%;
-  background-color:red;
+  background:url(test1.jpg);
   background-size:cover;
   background-postion:center;
 }
