--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 .hero{
   height:100vh;
   weight:100%;
-  background-color:#000000;
+  background:#000000;
   background-size:cover;
   background-postion:center;
 }
