--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,29 @@
 *{
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
   font-family: 'Josefin Sans',sans-serif;
   box-sizing: border-box;
 }
 .hero{
-  height:100vh;
-  weight:100%;
-  background:#000000;
-  background-size:cover;
-  background-postion:center;
+  height: 100px;
+  weight: 100%;
+  background: #000000;
+  background-size: cover;
+  background-postion: center;
 }
 nav{
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding-top:45px;
-  padding-left:8%;
-  padding-right:8%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 45px;
+  padding-left: 8%;
+  padding-right: 8%;
 }
 .logo{
   color:white;
-  font-size:35px;
-  letter-spacing:1px;
-  cursor:pointer;
+  font-size: 35px;
+  letter-spacing: 1px;
+  cursor: pointer;
 }
 span{
   color: #f9004d;
@@ -123,7 +123,7 @@ h4{
   color:white;
   letter-spacing:2px;
   font-size: 22px;
-  margin-bottom:25px;
+  margin-bottom: 25px;
   text-transfrom:capitalize;
 }
 .about-text p{
@@ -131,7 +131,7 @@ h4{
   letter-spacing:1px;
   line-heigth:28px;
   font-size:18px;
-  margin-bottom:45px;
+  margin-bottom: 45px;
 }
 button{
   background-color: #f9004d;
@@ -157,7 +157,7 @@ button:hover{
   color:white;
   font-size:75px;
   width:1130px;
-  margin:30px auto;
+  margin: 30px auto;
   text-align:center;
 }
 .box{
@@ -172,7 +172,7 @@ button:hover{
   padding:20px 35px;
   background:#191919;
   border-radius:20px;
-  margin:15px;
+  margin: 15px;
   position:relative;
   overflow:hidden;
   text-align:center;
@@ -181,19 +181,19 @@ button:hover{
   font-size:50px;
   display:block;
   text-align:center;
-  margin:20px 0px;
+  margin: 20px 0px;
   color:#f9004d;
 }
 h5{
   font-size:23px;
   color:white;
-  margin-bottom:15px;
+  margin-bottom: 15px;
 }
 .pra p{
   color:#fcfc;
   font-size:16px;
   line-heigth:27px;
-  margin-bottom:25px;
+  margin-bottom: 25px;
 }
 .card .button{
   background-color: #f9004d;
@@ -253,7 +253,7 @@ footer{
 footer p:nth-child(1){
   color:white;
   font-size:30px;
-  margin-bottom:20px;
+  margin-bottom: 20px;
   font-weight:bold;
 }
 footer p:nth-child(2){
