--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 .hero{
   height: 100vh;
-  weight: 100%;
+  width: 100%;
   background: #000000;
   background-size: cover;
   background-postion: center;
