--- a/style/link.css
+++ b/style/link.css
@@ -24,7 +24,6 @@
     background-color: white;
 }
 .link2 {
-    position: absolute;
     visibility: hidden;
     width: 100%;
     display: flex;
@@ -33,10 +32,11 @@
 .link2 img{
     margin-top: 10%;
     margin-left:30% ;
+    margin-bottom: 10%;
     border-radius: 50%;
     box-shadow: 0 3px 20px rgba(128, 0, 255, 0.2);
     border: 1px solid blueviolet;
-    width: 20%;
+    width: 50%;
     cursor: pointer;
     transition: all .45s ease;
 }
