--- a/style/homepage.css
+++ b/style/homepage.css
@@ -35,7 +35,8 @@ body{
     font-size: 1.5rem;
     padding: 1%;
     border-radius: 10%;
-    color: #333;
+    color: #ccc;
+    background-color: grey;
     border: 2px solid blueviolet;
     transition: all .45s ease;
     
