--- a/style/homepage.css
+++ b/style/homepage.css
@@ -36,7 +36,7 @@ body{
     padding: 1%;
     border-radius: 10%;
     color: #ccc;
-    background-color: grey;
+    background-color: #a155e7;
     transition: all .45s ease;
     
 }
