--- a/style/projects.css
+++ b/style/projects.css
@@ -53,7 +53,7 @@
     cursor: pointer;
     border-radius: 5%;
     margin-bottom: 5%;
-    background-color: grey;
+    background-color: #a155e7;
     transition: all .45s ease;
 }
 .itmes h4:hover{
